# CDS525_Group_Project

./: .gitignore  LICENSE  README.md  experiments.py  main.tex  model.py  presentation_outline.md  pyproject.toml  report_draft.md  report_outline.md  train.py  visualize_predictions.py
checkpoints/: best_baseline.pt  best_batch_128.pt  best_batch_16.pt  best_batch_32.pt  best_batch_64.pt  best_batch_8.pt  best_loss_label_smoothing.pt  best_lr_0.0001.pt  best_lr_0.001.pt  best_lr_0.01.pt  best_lr_0.1.pt
docs/: legacy_requirements_otdd.txt  mnist_otdd_legacy_readme.md  original_readme.md
results/: all_experiments_summary.csv  baseline_config.json  baseline_metrics.csv  batch_128_config.json  batch_128_metrics.csv  batch_16_config.json  batch_16_metrics.csv  batch_32_config.json  batch_32_metrics.csv  batch_64_config.json  batch_8_config.json  batch_8_metrics.csv  batch_sweep_summary.csv  loss_label_smoothing_config.json  loss_label_smoothing_metrics.csv  lr_0.0001_config.json  lr_0.0001_metrics.csv  lr_0.001_config.json  lr_0.01_config.json  lr_0.01_metrics.csv  lr_0.1_config.json  lr_0.1_metrics.csv  lr_sweep_summary.csv
scripts/: run_aggregate_results.sh  run_resnet50_moe_proto_full.sbatch  run_resnet50_moe_proto_full.sh  run_resnet50_teacher_distill_resume_full.sbatch  run_resnet50_teacher_distill_resume_full.sh  run_simplecnn_scdd_full.sbatch  run_simplecnn_scdd_full.sh  run_unified_benchmark_full.sbatch  run_unified_benchmark_full.sh
src/kmnist_oss/: __init__.py  data.py  experiments.py  model.py  plots.py  train.py  visualize_predictions.py
(+17 files in other folders)
